practicing data structure

--- a/python/data structure.ipynb
+++ b/python/data structure.ipynb
@@ -59,6 +59,13 @@
     "\n",
     "my_graph.display()\n",
     "\n",
+    "\n",
+    "#     A \n",
+    "#    / \\\n",
+    "#   B  D     #  this is the output of the code as a graph\n",
+    "#   \\ /\n",
+    "#    C   \n",
+    "\n",
     "        "
    ]
   },
